@@ -540,6 +540,8 @@ because of Phabricator reports.
   merged into the `elements` module.
 * ParsoidOutputAccess and all of its methods have been deprecated.  Use
   ParserOutputAccess with ParserOptions::setUseParsoid() instead.
+* ParserOutput::addJsConfigVars(), deprecated since 1.38, now emits deprecation
+  warnings. Use ParserOutput::setJsConfigVar() instead.
 * To support a future change allowing serializing of MessageValue objects
   as JSON, the methods MessageValue::objectParams(), Message::objectParams()
   and Message::objectParam() are deprecated. The UserGroupMembershipParam
